Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34715

Batched renderer not setting uniforms on styled text correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.2.0
    • 5.2.0 Beta1
    • Quick: SceneGraph
    • None
    • 98c47db70a72a8afbd86afd355dadb1ce9113361

      When using two styled Text elements, one with Text.Raised and one with Text.Sunken styles both are rendered with the same appearance when using the batched renderer.

      Using either style on it's own renders fine.

      I think it could be because the only difference between the two styles is the uniform vec2 shift and perhaps this uniform is not being updated when the two text items are batched together.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sletta Gunnar Sletta
            seanharmer Sean Harmer
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes