Implement missing compare() function for Raised/Sunken text

Task-number: QTBUG-34715

Change-Id: Ifdac2511b7f642b1ea4bd06847c840b5a951a753
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>